[package]
name = "hass-cli-auth-ldap"
version = "0.1.0"
edition = "2024"

[dependencies]
indoc = "2.0.5"
clap = {  version = "4.5.23", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
ldap3 = "0.11.5"
dirs = "4.0.0"
anyhow = "1.0"
url = "2.5.4"
tokio = "1.46.1"
futures = "0.3.31"

[dev-dependencies]
assertables = "9.5.0"