[package]
name = "hass-cli-auth-authentik"
version = "0.1.0"
edition = "2024"

[dependencies]
indoc = "2.0.5"
clap = {  version = "4.5.23", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
dirs = "4.0.0"
anyhow = "1.0"
url = "2.5.4"
tokio = {  version = "1.46.1", features = ["macros"] }
futures = "0.3.31"
authentik-client = { git = "https://github.com/dkowis/client-rust.git", branch = "build_for_kowis" }
# the default reqwest in authentik-client does not include cookies, but I can use all the models
reqwest = {  version = "0.12.22", features = ["json", "cookies", "rustls-tls", "http2" ] }
reqwest_cookie_store = "0.8.0"
reqwest-middleware = "0.4.2"

[dev-dependencies]
assertables = "9.5.0"