[package]
name = "hass-cli-auth-authentik"
version = "0.1.0"
edition = "2024"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-musl-gcc"

[dependencies]
indoc = "2.0.5"
clap = {  version = "4.5.23", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
dirs = "4.0.0"
anyhow = "1.0"
tokio = {  version = "1.46.1", features = ["macros"] }
authentik-client = { git = "https://github.com/dkowis/client-rust.git", branch = "build_for_kowis" }
# the default reqwest in authentik-client does not include cookies, but I can use all the models
reqwest = {  version = "0.12.22", default-features = false, features = ["json", "cookies", "rustls-tls", "http2" ] }
reqwest-middleware = { version = "0.4.2", default-features = false }

[dev-dependencies]
assertables = "9.5.0"